# GEDGameLinux

./: .clang-format  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  Makefile  README.md
GEDGame/: game.cfg
GEDGame/include/: GameEffect.hpp  Terrain.hpp  debug.hpp
GEDGame/shader/: game.fx
GEDGame/src/: Game.cpp  Terrain.cpp
